@@ -98,7 +98,8 @@ public class TestProtocolSpecific {
     System.arraycopy(new byte[]{0,1,2,3,4,5,6,7,8,9,0,1,2,3,4,5}, 0,
                      record.hash.bytes(), 0, 16);
     TestRecord echoed = proxy.echo(record);
-    assertEquals(record.name, echoed.name);
+    assertEquals(record, echoed);
+    assertEquals(record.hashCode(), echoed.hashCode());
   }
 
   @Test
