@@ -47,6 +47,9 @@ Trunk (unreleased changes)
 
     AVRO-37. Add C api docs.  Also link to py docs.  (Matt Massie & cutting)
 
+    AVRO-32. Java specific generated record classes now implement
+    equals() and hashCode().  (cutting)
+
   OPTIMIZATIONS
 
   BUG FIXES
